todo-app/base/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  strategy:
    canary:
      steps:
        - analysis:
            templates:
            - templateName: cpu-usage-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: persistentdata
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-app
          image: TODOAPP/IMAGE
          imagePullPolicy: Always
          volumeMounts:
            - name: persistentdata
              mountPath: /tmp/<REPLACE THIS>
          resources:
            limits:
              cpu: "10m"
              memory: "15Mi"
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8000
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 8000
